--- a/Keio-Sagamihara.html
+++ b/Keio-Sagamihara.html
@@ -25,7 +25,7 @@
     <img class="pic" src="img/Keio/Sagamihara/Sagamihara-2.jpg" alt="">
     <ul class="info">
     <li>撮影場所：1番ホーム京王多摩川寄り(<a href="https://www.google.co.jp/maps/place/35%C2%B038'04.9%22N+139%C2%B031'58.4%22E/@35.634821,139.5327263,120m/data=!3m1!1e3!4m5!3m4!1s0x0:0x0!8m2!3d35.634698!4d139.5328852?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
-    <li>対象：京王相模原線下り</li>
+    <li>対象：相模原線下り</li>
     <li>レンズ：望遠</li>
     <li>順光：午後</li>
     </ul>
@@ -34,7 +34,7 @@
     <img class="pic" src="img/Keio/Sagamihara/Sagamihara-1.jpg" alt="">
     <ul class="info">
     <li>撮影場所：1番線ホーム稲城寄り(<a href="https://www.google.co.jp/maps/place/35%C2%B037'58.5%22N+139%C2%B031'00.7%22E/@35.632915,139.5080952,2761m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.6329153!4d139.51685?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
-    <li>対象：京王相模原線上り</li>
+    <li>対象：相模原線上り</li>
     <li>レンズ：標準～望遠</li>
     <li>順光：午前</li>
     </ul>
