--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <a class="item" href="Keikyu.html">
         <img src="img/Keikyu/Keikyu/Keikyu-2.jpg" alt="" width="320" height="213">
-        <p>京急電鉄</p>
+        <p>京浜急行電鉄</p>
       </a>   
 
       <a class="item" href="Keisei.html">
