--- a/Keikyu-Keikyu.html
+++ b/Keikyu-Keikyu.html
@@ -30,7 +30,7 @@
       <li>順光：なし</li>
     </ul>
 
-    <p class="place">花月園前駅</p>
+    <p class="place">花月総持寺駅</p>
     <img class="pic" src="img/Keikyu/Keikyu/Keikyu-2.jpg" alt="">
     <ul class="info">
       <li>撮影場所：2番線ホーム京急鶴見寄り(<a href="https://www.google.co.jp/maps/place/35%C2%B030'01.8%22N+139%C2%B040'23.3%22E/@35.5005071,139.6725782,19z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.5005071!4d139.6731254?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
