--- a/info.html
+++ b/info.html
@@ -30,10 +30,17 @@
         <li>EF100-400mm F4.5-5.6L IS II USM</li>
         <li>EF24-105mm F4L IS II USM</li>
       </ul>
+      <p></p>
     <p class="line">掲載写真について</p>
       <p>本サイトに掲載している写真の無断転載は<span class="emphasis">禁止</span>です。</p>
     <p class="line">注意事項</p>
-      <p>本サイトに掲載している情報には、誤りがある可能性もあります。ご了承ください。<br>ルールやマナーを守り、撮影を行ってください。<br><span class="emphasis">撮影スポットでのトラブル等は、一切責任を負いかねます。</span></p>     
+      <ul>
+        <li>本サイトに掲載している情報には、誤りがある可能性もあります。ご了承ください。</li>
+        <li>ルールやマナーを守り、撮影を行ってください。</li>
+        <li><span class="emphasis">撮影スポットでのトラブル等は、一切責任を負いかねます。</span></li>
+        <li>本サイトに記載している焦点距離は、APS-Cサイズ(約1.6倍)で100mm未満を標準、100mm以上を望遠としています。</li>
+      </ul>
+
   </main>
 
   <div class="footer">
