--- a/JR-Saikyo.html
+++ b/JR-Saikyo.html
@@ -36,7 +36,7 @@
     <ul class="info">
       <li>撮影場所：1・2番線ホーム戸田公園寄り(<a href="https://www.google.co.jp/maps/place/35%C2%B047'27.6%22N+139%C2%B041'33.1%22E/@35.7910105,139.6919719,175m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.7910105!4d139.6925191?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
       <li>対象：埼京線下り</li>
-      <li>レンズ：中望遠</li>
+      <li>レンズ：望遠</li>
       <li>順光：午後</li>
     </ul>
   </main>
