--- a/JR-Cyuo.html
+++ b/JR-Cyuo.html
@@ -49,7 +49,7 @@
       <li>順光：午後</li>
     </ul>
 
-    <p class="place">八王子ー豊田間</p>
+    <p class="place">豊田ー八王子間</p>
     <img class="pic" src="img/JREast/Cyuo/Cyuo-3.jpg" alt="">
     <ul class="info">
       <li>撮影場所：平山大踏切付近(<a href="https://www.google.co.jp/maps/place/35%C2%B039'08.3%22N+139%C2%B021'51.3%22E/@35.6523104,139.3637114,175m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.6523104!4d139.3642586?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
