--- a/Keio-Keio.html
+++ b/Keio-Keio.html
@@ -58,7 +58,7 @@
       <li>順光：午前</li>
     </ul>
 
-    <p class="place">南平ー高幡不動間</p>
+    <p class="place">高幡不動ー南平間</p>
     <img class="pic" src="img/Keio/Keio/Keio-1.jpg" alt="">
     <ul class="info">
       <li>撮影場所：駅間にある南平小学校付近(<a href="https://www.google.co.jp/maps/place/35%C2%B039'39.7%22N+139%C2%B023'56.9%22E/@35.6606907,139.3980361,173m/data=!3m1!1e3!4m5!3m4!1s0x0:0x0!8m2!3d35.6610238!4d139.3991454?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
