--- a/Sotetsu-Sotetsu.html
+++ b/Sotetsu-Sotetsu.html
@@ -21,7 +21,7 @@
       <li><a href="index.html">ホーム</a></li><li><a href="Sotetsu.html">相模鉄道</a></li><li><a href="Sotetsu-Sotetsu.html">相鉄線</a></li>
     </ol>
     <p class="list">相鉄線</p>
-    <p class="place">さがみ野ー相模大塚間</p>
+    <p class="place">相模大塚ーさがみ野間</p>
     <img class="pic" src="img/Sotetsu/Sotetsu/Sotetsu-1.jpg" alt="">
     <ul class="info">
       <li>撮影場所：相模大塚2号踏切(<a href="https://www.google.co.jp/maps/place/35%C2%B028'16.9%22N+139%C2%B026'11.9%22E/@35.4712154,139.4363223,80m/data=!3m1!1e3!4m5!3m4!1s0x0:0x0!8m2!3d35.4713528!4d139.4366307?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
