--- a/JR-Joban.html
+++ b/JR-Joban.html
@@ -22,7 +22,7 @@
     </ol>
     <p class="list">常磐線</p>
 
-    <p class="place">松戸ー金町間</p>
+    <p class="place">金町ー松戸間</p>
     <img class="pic" src="img/JREast/Joban/Joban-2.jpg" alt="">
     <ul class="info">
       <li>撮影場所：駅間の跨線橋(<a href="https://www.google.co.jp/maps/place/35%C2%B046'33.0%22N+139%C2%B053'50.6%22E/@35.7758187,139.8968472,175m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.7758187!4d139.8973944?hl=ja"><i class="fas fa-map-marker-alt"></i> Googleマップ</a>)</li>
